--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "copy-to-clipboard": "^3.0.8",
     "crypto-js": "^3.1.9-1",
     "faker": "^4.1.0",
-    "firebase": "^5.6.0",
+    "firebase": "^7.17.1",
+    "grpc": "^1.24.3",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.12.2",
     "inversify": "^5.0.1",
@@ -46,6 +47,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
+    "node-sass": "^4.14.1",
     "node-sass-chokidar": "1.3.4",
     "npm": "^6.4.1",
     "npm-run-all": "^4.1.5",
